1.3.13
	+ Bug fix: configuration of PPPoE interfaces now works when
	  confirmation is required because of other modules
	+ Default field in gateways model uses '/ajax/viewer/booleanViewer.mas'
	  instead of in-place edition
1.3.11
	+ Bug fix: fix issue with virtual interfaces on vlan interfaces
	+ Add breadcrumbs
1.3.10
	+ Added PPPoE support
1.3.7
	+ Bug fix: update ebox-netcfg-import to not add upload and download as those
	  fields do no exist any longer
1.3.6
	+ Remove upload/download fields from gateways.
	  Traffic shaping has its own model for that
	+ Bug fix: traffic generated by eBox didn't come out from the
	  right interface as we cleared the CONNMARK with a --save-mark
1.3.4
	+ bugfix: add use=web to guess the public address
	+ bugfix: make ddclient work with dhcp configured interfaces
	+ bugfix: multi gateway rules work again
1.3.3
	+ Bugfix: Edition and removal routes is working again
	+ Remove those static routes that they have been manually added
1.3.1
	+ bugfix: do not use Net::DNS
	+ bugfix: used vlan interface can be removed
1.3.0
	+ bugfix: restart network interfaces properly
1.2
	+ Added support for WAN failover
	+ ifaceNetmask method now uses DHCPNetmask to get the dhcp ifaces
	netmask instead NetWrapper call this adds symethrie with
	ifaceAdrress method and fixes a bug when changing a dhcp interface
	with no lease to static interface
1.1.30
	+ Added support for all missing netmasks between /16 and /32
	+ Added support for search domain in /etc/resolv.conf
	+ Use a template to write down /etc/resolv.conf to allow easier
	user modifications
	+ Use ICMP for traceroute diagnosis
1.1
	+ Added traceroute on network diagnosis
	+ Use new rows() and ids() API
	+ Bugfix: ebox-netcfg-import uses model API to import default gateway
	+ Support for dyndns
	+ Gateway models does not use longet custom views
	+ Gateway rules table now use services
0.12.99
	+ New release
0.12
	+ Use new EBox::Model::Row api
	+ Add help to model fields