@@ -1,3 +1,6 @@
+HEAD
+	+ Add a warning if a user sets an interface as external and we detect
+	  the connection is made through that interface
 1.3.13
 	+ Bug fix: configuration of PPPoE interfaces now works when
 	  confirmation is required because of other modules
